# voice-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  server.py
src/voice_pipeline/: client.py  config.py  server.py
