[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voice-pipeline"
version = "0.1.0"
description = "A voice to data pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "pydantic-settings>=2.0.0",
    "sounddevice>=0.5.5",
    "uvicorn>=0.42.0",
    "websockets>=16.0",
]

[project.scripts]
server = "voice_pipeline.server:main"
client = "voice_pipeline.client:main"

[tool.hatch.build.targets.wheel]
packages = ["src/voice_pipeline"]
